[package]
name = "lol-async"
version = "0.2.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lol-async"
repository = "https://github.com/jbr/lol-async"
description = "async html-rewriter"

[dependencies]
futures-lite = "2.0.0"
pin-project-lite = "0.2.9"
atomic-waker = "1.1.1"
lol_html = "1.0.0"
lockfree = "0.5.1"

[dev-dependencies]
async-executor = "1.5.1"
async-io = "2.0.0"
async-global-executor = "2.3.1"
