[package]
name = "lol-async"
version = "0.3.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lol-async"
repository = "https://github.com/jbr/lol-async"
description = "async html-rewriter"

[dependencies]
futures-lite = "2.6.1"
pin-project-lite = "0.2.17"
lol_html = "2.7.2"

[dev-dependencies]
async-global-executor = "3.1.0"
